# learning-feeds

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-and-push.yaml  build.yaml  learning-feeds-AutoDeployTrigger-d4fb9916-cb2a-44a9-ad10-cff1abc4b2f1.yml
learning-feeds/loader/: loader.py
learning-feeds/server/: log_conf.yml  server.py
loader/: loader.py
server/: log_conf.yml  server.py
