[tool.poetry]
name = "learning-feeds"
version = "0.1.0"
description = ""
authors = ["Wes Hargrove <wes@hargrove.me>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
aiosqlite = "^0.20.0"
fastapi = "^0.110.0"
feedgen = "^1.0.0"
uvicorn = "^0.27.1"
python-slugify = "^8.0.4"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
