[tool.poetry]
name = "learning-feeds"
version = "0.1.0"
description = ""
authors = ["Wes Hargrove <wes@hargrove.me>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
aiosqlite = "^0.20.0"
fastapi = "^0.110.0"
feedgen = "^1.0.0"
uvicorn = "^0.27.1"
python-slugify = "^8.0.4"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
black = "^24.3.0"
mypy = "^1.9.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
